Update CHANGELOG in preperation for 4.0.0-M2 release.